# AI-Hands

./: .ci-allowlist.txt  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  claude_desktop_config.example.json  doctor.ps1
.agents/plugins/: marketplace.json
.cargo/: audit.toml
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  supply-chain.yml
docs/: UNIFIED_V1_1_VALIDATION.md  getting-started.md  guide.md  per_machine_setup.md
examples/: README.md  api_learning.md  browser_scrape.md  desktop_automation.md
installers/: README.md
installers/inno/: AIHands.iss  PREREQUISITES.txt  build-installer.bat  build-package-matrix.bat
installers/plugin-abi/: README.md  ai_hands_plugin.h
installers/plugin-abi/example/: Cargo.toml  README.md
installers/plugin-abi/example/src/: lib.rs
installers/scoop/: ai-hands.json
installers/scripts/: Finalize-InstalledPlugin.ps1  generate-winget-manifests.ps1  register-hands.ps1
integrations/: voice-command.lock.json
manifest/: unified_hands_manifest.json
mcpb/: README.md  manifest.json
plugins/: README.md  test_plugin_profiles.py
plugins/ai-hands/: .mcp.json  README.md
plugins/ai-hands-skills/: README.md
plugins/ai-hands-skills/.claude-plugin/: plugin.json
plugins/grok-ai-hands/: README.md
scripts/: archive-dist.ps1  browser-security-smoke.ps1  build-release-payloads.bat  build-template.bat  check-template.bat  cold-test-installers.ps1  generate-manifest.ps1  js_extract.js  monitor-smoke-test.ps1  refresh-lock.bat  smoke-test-voice.ps1  smoke-test.ps1
skills/: hands-recommended-instructions.md  hands.md
skills/hands/: skill.md
skills/hands-getting-started/: SKILL.md
src/: a11y_cache.rs  atomic.rs  canonical.rs  dashboard_endpoint.rs  fingerprint.rs  main.rs  monitor_scope.rs  network_redaction.rs  security.rs  stealth.rs  uia_lib.rs  vision_core.rs
src.pre_phaseD_20260419_193050/meta/: capture.rs  click.rs  consent.rs  error.rs  field_role.rs  fill_form.rs  find.rs  label_match.rs  nl_parser.rs  response.rs  reversibility.rs  session.rs  type_text.rs  verify.rs  verify_templates.rs  vision_capture.rs  window_match.rs
src.pre_phaseD_20260419_193050/uia/: mod.rs  ref_cache.rs
src/meta/: app_action.rs  attach_lock.rs  autofill.rs  cache.rs  capture.rs  click.rs  click.rs.bak_20260414_154611  consent.rs  error.rs  field_role.rs  fill_form.rs  find.rs  health.rs  instrumentation.rs  instrumentation.rs.bak_20260414_154611  label_match.rs  mod.rs  navigate.rs  navigate.rs.bak_20260414_154611  network_subscribe.rs  nl_parser.rs  ocr_fast.rs  qr_scan.rs  read_page.rs  response.rs  reversibility.rs  save_dialog.rs  script.rs  self_record.rs  session.rs  summarize_run.rs  targeting.rs  tests.rs  tests_phase_b.rs  tests_phase_c.rs  type_text.rs  verify.rs  verify_expectations.rs  verify_templates.rs  vision_cache.rs  (+2 more)
src/plugin/: abi.rs  loader.rs  mod.rs  registry.rs
src/uia/: mod.rs  ref_cache.rs
(+35 files in other folders)
